--- a/docs/style.css
+++ b/docs/style.css
@@ -9,12 +9,50 @@ h1 {
   background-color: white;
 }
 
-.btn {
+.event-colors {
+  display: flex;
+  align-items: center;
+}
+
+.color-btn {
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: #4CAF50;
+  padding: 10px;
+  border: none;
+}
+
+.event-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.event-btn {
   background-color: #4CAF50;
   border: none;
   color: white;
-  padding: 16px 32px;
+  padding: 16px 24px;
   text-decoration: none;
-  margin: 4px 2px;
+  margin: 2px 2px;
   cursor: pointer;
+  font-size: 16px;
+}
+
+.both-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.both-btn {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 16px;
+  text-align: center;
+  text-decoration: none;
+  /*display: inline-block;*/
+  font-size: 16px;
 }
