add alert and edit popup

--- a/docs/style.css
+++ b/docs/style.css
@@ -30,7 +30,7 @@ h1 {
 }
 
 .event-btn {
-  background-color: #4CAF50;
+  background-color: #0066ff;
   border: none;
   color: white;
   padding: 16px 24px;
